--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "promise-mysql": "^3.3.1",
     "jsonwebtoken": "^8.3.0",
     "bcrypt": "^3.0.0",
-    "file-type": "^10.9.0"
+    "file-type": "^10.9.0",
+    "moment": "^2.24.0"
   }
 }
