--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "debug": "node --trace-warnings %NODE_DEBUG_OPTION% server.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "mz": "^2.7.0",
-    "promise-mysql": "^3.3.1",
-    "jsonwebtoken": "^8.3.0",
-    "bcrypt": "^3.0.0",
+    "express-formidable": "^1.2.0",
     "file-type": "^10.9.0",
-    "moment": "^2.24.0"
+    "jsonwebtoken": "^8.3.0",
+    "moment": "^2.24.0",
+    "mz": "^2.7.0",
+    "promise-mysql": "^3.3.1"
   }
 }
