--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.19",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vue-star-rating": "^1.6.1"
   },
   "browserslist": [
     "> 1%",
