--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -15,8 +15,10 @@
     "bootstrap-vue": "^2.0.0-rc.19",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-masonry": "^0.11.7",
     "vue-router": "^3.0.6",
-    "vue-star-rating": "^1.6.1"
+    "vue-star-rating": "^1.6.1",
+    "vuetify": "^1.5.14"
   },
   "browserslist": [
     "> 1%",
