--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.0.0-rc.19",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-cookies-ts": "^1.5.13",
     "vue-masonry": "^0.11.7",
     "vue-router": "^3.0.6",
     "vue-star-rating": "^1.6.1",
