Add _ to package.json

--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vue client",
+  "name": "Vue_client",
   "description": "365 assignment 2",
   "version": "1.0.0",
   "author": "Mystery",
